# Nero

./: .gitignore  CMakeLists.txt  README.md  build.sh  dimension_wasm_interface.ts  nero_wasm_interface.test.ts  nero_wasm_interface.ts  package-lock.json  package.json  run.sh  tsconfig.json
.github/workflows/: nightly.yml  release.yml
.husky/: pre-commit
formula_gen/: ALL.txt  all_formulas.json  formula_extractor.ts  formulas_ac_circuits.json  formulas_capacitance.json  formulas_chemistry.json  formulas_current_resistance.json  formulas_dc_circuits.json  formulas_electric_potential.json  formulas_electrostatics.json  formulas_inductance.json  formulas_induction.json  formulas_magnetic_sources.json  formulas_magnetism.json  formulas_misc.json  formulas_physics1.json  formulas_thermodynamics.json  formulas_to_cpp.ts  rearrange.ts
scripts/: constants_gen.ts  gen_interface_consts.ts  gen_readme_tables.ts  unit_gen.ts  update_bench_readme.py
src/: ast.cpp  ast.hpp  benchmark.cpp  builtins.cpp  builtins.hpp  dimeval.cpp  dimeval.hpp  evaluator.cpp  evaluator.hpp  formula_finder.hpp  lexer.cpp  lexer.hpp  main.cpp  parser.cpp  parser.hpp  physics_formulas.hpp  print.hpp  symbolic_diff.cpp  symbolic_diff.hpp  test.cpp  testing.hpp  token.hpp  value_utils.cpp  value_utils.hpp  wasm_api.cpp
src/formulas/: physics_formulas_batch0.cpp  physics_formulas_batch1.cpp  physics_formulas_batch10.cpp  physics_formulas_batch11.cpp  physics_formulas_batch12.cpp  physics_formulas_batch13.cpp  physics_formulas_batch14.cpp  physics_formulas_batch15.cpp  physics_formulas_batch16.cpp  physics_formulas_batch17.cpp  physics_formulas_batch18.cpp  physics_formulas_batch19.cpp  physics_formulas_batch2.cpp  physics_formulas_batch3.cpp  physics_formulas_batch4.cpp  physics_formulas_batch5.cpp  physics_formulas_batch6.cpp  physics_formulas_batch7.cpp  physics_formulas_batch8.cpp  physics_formulas_batch9.cpp  physics_formulas_main.cpp
unit_gen/: unit_gen.ts
